--- a/packaging/windows/WIXInstallers/KeybaseApps/KeybaseApps.wxs
+++ b/packaging/windows/WIXInstallers/KeybaseApps/KeybaseApps.wxs
@@ -34,7 +34,7 @@
       <ComponentGroupRef Id="GuiComponents" />
       <ComponentGroupRef Id="PrompterComponents" />
       <ComponentGroupRef Id="ApplicationShortcuts" />
-      <ComponentGroupRef Id="StartupShortcuts" />
+      <ComponentGroupRef Id="StartupRunKeys" />
     </Feature>
 
     <FeatureRef Id="KBFSFeature" />
@@ -75,16 +75,18 @@
   
   <Fragment>
 		<Directory Id="TARGETDIR" Name="SourceDir">
+      <!--Typically C:\Users\USERNAME\AppData\Local-->
 			<Directory Id="LocalAppDataFolder">
         <Directory Id="INSTALLFOLDER" Name="Keybase">
           <Directory Id="PROMPTERFOLDER" Name="prompter"/>
         </Directory>
       </Directory>
       <Directory Id="ProgramMenuFolder">
-        <Directory Id="ApplicationProgramsFolder" Name="Keybase"/>
+        <Directory Id="APPLICATIONPROGRAMSLFOLDER" Name="Keybase"/>
       </Directory>
-      <Directory Id="StartupFolder" Name="Startup" />
+      <!--The 32bit system folder typically C:\Windows\SysWow64 on x64, and C:\Windows\System32 on x86-->
       <Directory Id="SystemFolder" Name="System" />
+      <!--The "old installer" Keybase has files in Roaming-->
       <Directory Id="AppDataFolder">
         <Directory Id="ROAMINGINSTALLFOLDER" Name="Keybase">
         </Directory>
@@ -165,34 +167,24 @@
       </Component>
     </ComponentGroup>
   </Fragment>
-  
+
+
   <Fragment>
-    <ComponentGroup Id="StartupShortcuts" Directory="StartupFolder">
-      <Component Id="AppShortCutStartUpComponent" Guid="{2EE65854-7CA1-4010-B62B-780F1C39ED0A}">
-        <Shortcut Id="AppShortCutStartUp" Name="KeybaseStartup"
-                  Description="Start Keybase at boot"
-                  Target="[INSTALLFOLDER]runquiet.exe"
-                  Arguments="keybase.exe ctl watchdog2"
-                  WorkingDirectory="INSTALLFOLDER"/>
-        <RegistryKey Root="HKCU" Key="Software\Keybase\Keybase">
-          <RegistryValue Name="ShortCutStartUp" Type="integer" Value="1" KeyPath="yes"  />
-        </RegistryKey>
+    <!--Start the application and GUI on user logon
+    TODO These must be disabled/deleted if there is an interim reboot between upgrading Dokan and upgrading Keybase Apps -->
+    <ComponentGroup Id="StartupRunKeys" Directory="INSTALLFOLDER">
+      <Component Id="AppRunKeyComponent" Guid="{B0F58F8C-A2F0-483F-8193-E4E254B7779F}">
+        <RegistryValue Root="HKCU" Key="SOFTWARE\Microsoft\Windows\CurrentVersion\Run" Name="Keybase" Value="&quot;[#runquiet.exe]&quot; &quot;[#keybase.exe]&quot; ctl watchdog2" Type="string" />
       </Component>
-      <Component Id="GUIShortCutStartUpComponent" Guid="{4AC98412-7636-4727-AB39-44A98E25249A}">
-        <Shortcut Id="GUIShortCutStartUp" Name="GUIStartup"
-                  Description="Start GUI at boot"
-                  Target="[INSTALLFOLDER]runquiet.exe"
-                  Arguments="&quot;[GuiDir]Keybase.exe&quot;"
-                  WorkingDirectory="INSTALLFOLDER"/>
-        <RegistryKey Root="HKCU" Key="Software\Keybase\Keybase">
-          <RegistryValue Name="ShortCutStartUpGUI" Type="integer" Value="1" KeyPath="yes"  />
-        </RegistryKey>
+      <!--TODO change GUI Keybase.exe to a human readable file id (for example [#KeybaseGUI]) with gui.xsl-->
+      <Component Id="GUIRunKeyComponent" Guid="{117D9139-9E66-4BDB-B5BF-F7F508F27BDC}">
+        <RegistryValue Root="HKCU" Key="SOFTWARE\Microsoft\Windows\CurrentVersion\Run" Name="KeybaseGUI" Value="&quot;[#runquiet.exe]&quot; &quot;[#filFCBDD0EBC22C5E5F749A2CF084F8DA8A]&quot;" Type="string" />
       </Component>
-    </ComponentGroup>  
+    </ComponentGroup>
   </Fragment>
-  
+ 
   <Fragment>
-    <ComponentGroup Id="ApplicationShortcuts" Directory="ApplicationProgramsFolder">
+    <ComponentGroup Id="ApplicationShortcuts" Directory="APPLICATIONPROGRAMSLFOLDER">
       <Component Id="ApplicationShortcut" Guid="E05F8D29-F530-4791-AE6B-B89DAE1F6D5C">
           <Shortcut Id="ApplicationStartMenuShortcut"
               Name="Keybase Shell"
@@ -201,7 +193,7 @@
               Arguments="/K &quot;set PATH=%PATH%;[INSTALLFOLDER]&quot;"
               WorkingDirectory="INSTALLFOLDER"      
               Icon="ProductIcon"/>
-          <RemoveFolder Id="ApplicationProgramsFolder" On="uninstall"/>
+          <RemoveFolder Id="APPLICATIONPROGRAMSLFOLDER" On="uninstall"/>
           <RegistryValue Root="HKCU" Key="Software\Keybase\Keybase" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
       </Component>
       <!--TODO change GUI Keybase.exe to a human readable file id (for example [#KeybaseGUI]) with gui.xsl-->
